--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     --bg-color:#fff;
     --text-color: #0f0c27;
     --hover:hsl(260, 100%, 51%);
+    /* --hover:#22cf91; */
 
     --big-font: 3.2rem;
     --medium-font:1.8rem;
@@ -26,6 +27,7 @@
 body{
     background: var(--bg-color);
     color: var(--text-color);
+    background-color:antiquewhite;
 }
 
 .heading{
@@ -70,6 +72,7 @@ header{
     transition: 0.2s;
     box-shadow: -3px -3px  7px #ffffff73,
                 2px 2px 5px rgba(94, 104 , 121, 0.288);
+                background-color: rgb(189, 181, 171);
 }
 .logo{
     font-size: 1.61rem;
@@ -78,6 +81,7 @@ header{
 }
 .navbar{
     display: flex;
+
 }
 .navbar a{
     font-size: 1rem;
@@ -114,10 +118,14 @@ header{
 }
 .home-img{
     order: 3;
+
 }
 .home-img img{
     width: 70%;
-    border-radius: 10%;
+    border-radius: 30% 70% 52% 48% / 30% 30% 70% 70% ;
+    border-radius: 45% 55% 67% 33% / 57% 63% 37% 43% ;
+    /* border-radius: 82% 18% 48% 52% / 45% 44% 56% 55% ; */
+    /* border-radius: 30% 70% 29% 71% / 50% 50% 50% 50% ; */
 }
 .home-text span{
     font-size: var(--medium-font);
@@ -154,7 +162,11 @@ header{
     justify-items: center;
     align-items: center;
     text-align: center;
+
     background:var(--main-color);
+    background-color: #997787;
+    background-color: #7e4d63;
+    
     color: #fff;
     padding: 0.7rem 1.3rem;
     border-radius:0.5rem ;
@@ -217,4 +229,382 @@ header{
 .information .info-box span{
      font-weight: 400;
      margin-left: 1rem;
+}
+
+/* ================================Skilss Section======================================= */
+
+.skills-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(210px,auto));
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+#myskills{
+    display: grid;
+    grid-template-columns: repeat(2,minmax(200px,auto));
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+#myskills .skills-box{
+    /* border: 1px solid; */
+    width:420px;
+}
+.skills-box{
+    padding: 20px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 0.5rem;
+    /* border-bottom: 2px solid var(--main-color); */
+    border-bottom: 2px solid #7e4d63 ;
+    box-shadow: 0 2px 7px rgba(14, 55, 54 /15%);
+}
+
+.skills-box .fa-brands{
+    padding-top:2rem;
+    font-size: 54px;
+    color: #613247;
+    color: #0F0C27;
+}
+.skills-box .fa-sharp{
+    padding-top:2rem;
+    font-size: 54px;
+    color: #613247;
+    color: #0F0C27;
+}
+.skills-box h3{
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 0.7rem 0 0.4rem;
+}
+.skills-box a{
+    color: var(--main-color);
+    font-size: var(--p-font);
+    font-weight: 500;
+}
+/* hover */
+.skills-box:hover{
+
+    /* background-color: #02225a; */
+    background-color: #7e4d63;
+}
+.skills-box:hover h3{
+    color: #fff;
+}
+.skills-box:hover .fa-brands{
+    color: #22cf91;
+}
+.skills-box:hover .fa-sharp{
+    color: #22cf91;
+}
+.skills-box:hover a{
+    color: #8b8a8f;
+}
+/* =============================Project======================= */
+.project-content{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+.project-box img{
+    width: 100%;
+    border-radius: 0.5rem;
+}
+.project-data p{
+    font-size: var(--p-font);
+    font-weight: 400;
+    text-align: justify;
+    margin-bottom:0.5rem ;
+    color: #8b8a8f;
+}
+.project-data{
+    margin: 1rem 0 1.4rem;
+}
+.project-btn{
+    display: flex;
+    gap: 2rem;
+}
+.project-btn a{
+    display:inline-block;
+    background:var(--main-color);
+    color: #fff;
+    padding: 0.7rem 1.3rem;
+    border-radius:0.5rem ;
+}
+.project-btn a:hover{
+    background: var(--hover);
+}
+#github{
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+
+/* statics */
+#statics{
+    display: grid;
+    grid-template-columns: repeat(3,minmax(210px,auto));
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.circle{
+    border: 10px solid #0F0C27;
+    padding: 2rem;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    font-weight: var(--big-font);
+    font-size: 20px;
+    align-items: center;
+    border-radius:50%;
+}
+.circle:hover{
+border-color: #22cf91;
+color: #fff;
+}
+/* =========================== Contact========================= */
+.contact-form{
+    display: grid;
+    /* border: 1px solid; */
+    grid-template-columns: repeat(1,1fr);
+    gap: 30px;
+    place-items: center;
+    margin-top: 2rem;
+}
+.contact-form form{
+    display: flex;
+    flex-direction: column;
+    width: 650px;
+}
+form input,
+textarea{
+    padding: 15px;
+    border-radius: 0.5rem;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: hsla(260, 100%, 44%, 0.1);
+    margin-bottom: 1rem;
+    color: var(--text-color);
+}
+form textarea{
+    resize: none;
+    height: 200px;
+}
+form input::placeholder,
+textarea::placeholder {
+  color: var(--text-color);
+}
+
+.contact-button{
+    width: 160px;
+    cursor: pointer;
+    background: #2768d9;
+    color: #fff;
+    justify-content: center;
+    text-transform: uppercase;
+    letter-spacing:1px ;
+    margin-left:35% ;
+}
+.contact-button:hover{
+    background: var(--hover);
+}
+
+/* =======================footer section========================== */
+.footer{
+    display: grid;
+    place-items: center;
+    padding: 20px;
+    background: #ebebeb;
+    width: 100%;
+    color: #000;
+}
+.footer h2{
+    font-size: 1.5rem;
+    margin-bottom: 1.6rem;
+}
+.footer-social a i{
+    color: rgb(10, 26, 208);
+    font-size: 25px;
+    margin-left: 10px;
+    text-align: center;
+    line-height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+
+/* ========================== make it responsive ========================== */
+ 
+@media (max-width:991px){
+    header{
+        padding: 18px 4%;
+    }
+    section{
+        padding: 50px 4%;
+    }
+}
+
+@media (max-width:881px){
+    :root{
+        --bg-font:2.7rem;
+        --medium-font:1.4rem;
+    }
+    #myskills .skills-box{
+        width: 360px;
+    }
+}
+
+@media (max-width: 768px){
+    :root{
+        --big-font:2.4rem;
+        --medium-font:1.2rem;
+    }
+
+    header{
+        padding: 11px 4%;
+    }
+    
+    #menu-icon{
+        display: initial;
+        color: var(--text-color);    
+    }
+    header .navbar{
+        position: absolute;
+        top: -500px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg-color);
+        box-shadow: 0 4px 4px rgb(0 0 0/ 10%);
+        transition: 0.2s ease;
+        text-align: center;
+    }
+    .navbar.active{
+        top: 100%;
+    }
+    .navbar a{
+        padding: 1.5rem;
+        display: block;
+        background: var(--bg-color);
+    }
+
+    #darkmode{
+        position: absolute;
+        top: 1.4rem;
+        right: 2rem;
+    }
+    .home{
+        grid-template-columns: 0.5fr 3fr;
+    }
+    .home-img{
+        display: flex;
+        justify-content: center;
+        order: initial;
+    }
+    .home-img img{
+        width: 60%;
+    }
+    .home-text{
+        grid-column: 1/3;
+        padding-left: 1.4rem;
+    }
+    .about-container{
+        grid-template-columns: 1fr;
+    }
+    
+    .project-content{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .contact-form form{
+        width: 300px;
+    }
+    .contact-button{
+        margin-left: 25% ;
+    }
+    .about-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .about-text p{
+        text-align: center;
+    }
+    .about-num{
+        
+        display: flex;
+        gap: 2rem;
+    }
+    #myskills .skills-box{
+        width: 300px;
+    }
+    #statics .skills-box{
+        width: 220px;
+    }
+}
+@media(max-width:650px){
+    #myskills .skills-box{
+        width: 170px;
+    }
+}
+
+@media (max-width:415px){
+    :root{
+        --big-font:1.7rem;
+        --medium-font:1.1rem;
+    }
+    .home-text span{
+        font-size: 1rem;
+    }
+    .home-img{
+        display: flex;
+        justify-content: center;
+    }
+    .home-img img{
+        width: 90%;
+    }
+    .home-text h2{
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+    .information .info-box span{
+        font-size: 1rem;
+    }
+    
+    .project-content{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .contact-form form{
+        width: 300px;
+    }
+    .contact-button{
+        margin-left: 25%;
+    }
+    .skills-content{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .skills-box{
+        width: 150px;
+    }
+    #myskills .skills-box{
+        width: 150px;
+    }
+    #myskills{
+        grid-template-columns: repeat(2,1fr);
+    }
+    #statics{
+        grid-template-columns: repeat(2,1fr);
+    }
+    #statics .skills-box{
+        width: 150px;
+    }
 }
